Remove Vatican stuff

--- a/app/views/games/dashboard.html.erb
+++ b/app/views/games/dashboard.html.erb
@@ -94,10 +94,9 @@
         </div>
 
         <div id="activity-container">
-          <img id="activity-image" src="/assets/vatican.png" /></img>
-          <h3 class="Vatican">Vatican Activity</h3>
-          <h5 class="Vatican">Ego sum veritias via</h5>
-          <p class="Vatican">{{activity}}</p>
+        <img id="activity-image" src="/assets/activity.png" />
+           <h3>Military Activity</h3>
+          <p>{{activity}}</p>
         </div>
       </div>
     </div>
