--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -247,12 +247,31 @@ $terror-red: #BD2C00;
                   NEWS
    ===================================== */
 
-.news-item {
-  display: none;
 
-  &:first-child {
-    display: block;
-  }
+#news-block {
+  bottom: 50px;
+  position: fixed;
+  width: 100%;
+}
+
+h3.news {
+  background: $terror-red;
+  color: $white;
+  display: inline-block;
+  font-weight: bold;
+  margin: 0;
+  padding: 5px 10px;
+
+  box-shadow: 3px -3px 15px -5px rgba(0,0,0,0.75);
+}
+
+#news-container {
+  @include topBottomGradient(#1e5799, #2989d8, #7db9e8);
+  color: white;
+  min-height: 140px;
+  padding: 10px;
+
+  box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
 
   h4 {
     font-weight: bold;
@@ -286,4 +305,51 @@ $terror-red: #BD2C00;
     text-decoration: none;
     text-transform: uppercase;
   }
+
+  .slider {
+    height: 150px;
+    overflow: hidden;
+    position: relative;
+    width: calc(100% - 300px);
+  }
+
+  .slide {
+    left: 0;
+    position: absolute;
+    top: 0;
+  }
 }
+
+#news-image {
+  background: $black;
+  border: 20px solid #1e5799;
+  bottom: 0px;
+  height: 300px;
+  position: absolute;
+  right: 0px;
+  width: 300px;
+
+  box-shadow: -3px -3px 15px -5px rgba(0,0,0,0.75);
+
+  .placeholder {
+    background-color: $black;
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 260px;
+    width: 260px;
+  }
+
+  .image {
+    background-color: $black;
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 260px;
+    left: 0px;
+    position: absolute;
+    top: 0px;
+    width: 260px;
+  }
+}
+
+
+
