--- a/app/views/games/dashboard.html.erb
+++ b/app/views/games/dashboard.html.erb
@@ -12,22 +12,29 @@
         </h2>
         <h3>Turn {{round}}</h3>
         <h3 class="paused" ng-if="paused">(Paused)</h3>
-      </div>
 
-      <!-- News -->
-      <h3>News</h3>
-      <div class="news-container">
-        <div class="news-item" ng-if="news.length>0" ng-repeat="news_item in news">
+  <!-- News -->
+  <div id="news-block">
+    <h3 class="news">Breaking News</h3>
+
+    <div id="news-image">
+      <div class="placeholder" style="background-image: url('/assets/empire.png')"></div>
+      <div class="image"
+           ng-show="news[newsIndex].media_url"
+           style="background-image: url({{news[newsIndex].media_url}})">
+      </div>
+    </div>
+
+    <div id="news-container">
+      <div class="slider" ng-if="news.length>0">
+        <div ng-repeat="news_item in news"
+             class="slide slide-animation nonDraggableImage"
+             ng-hide="!isCurrentSlideIndex($index)">
           <h4>{{news_item.title}}</h4>
-          <img ng-show="{{news_item.media_url.length>0}}" ng-src="{{news_item.media_url}}" />
           <p>{{news_item.content}}</p>
           <p class="date">Reported at {{news_item.created_at| date:'h:mma'}}</p>
         </div>
-        <div class="news-item" ng-if="news.length==0">
-          <h4>Nothing has happened yet<h4>
-        </div>
       </div>
-    </div>
 
     <div class="right-column">
       <!-- Terror -->
