--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,8 @@
     <%= javascript_include_tag 'application'%>
     <%= csrf_meta_tags %>
   </head>
-  <body>
+
+  <body class="<%= 'dashboard' if current_page?('/') %>">
     <%= yield %>
 
     <%= render "layouts/footer_navbar" %>
