--- a/app/views/games/dashboard.html.erb
+++ b/app/views/games/dashboard.html.erb
@@ -1,4 +1,4 @@
-<div ng-app='dashboardApp' ng-controller="DashboardCtrl" id="dashboard">
+<div ng-app='dashboardApp' ng-controller="dashboardCtrl" id="dashboard">
   <div id="control-messages">
     <p>{{controlMessage}}</p>
   </div>
