--- a/app/views/layouts/_footer_navbar.html.erb
+++ b/app/views/layouts/_footer_navbar.html.erb
@@ -9,6 +9,9 @@
     <li><%= link_to 'News', news_messages_path %></li>
     <li><%= link_to 'Tweets', tweets_path %></li>
     <li><%= link_to 'Administration', admin_control_path %></li>
+    <% if current_user && current_user.super_admin? %>
+    <li><%= link_to 'Super Administration', users_path %></li>
+    <% end %>
   </ul>
 </nav>
 <% end %>
