--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -85,13 +85,13 @@ $terror-red: #BD2C00;
    ===================================== */
 
 #top-container {
-  box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
   height: 130px;
   margin: 0 20px;
 }
 
 #round-container {
   @include topBottomGradient(#1e5799, #2989d8, #7db9e8);
+  box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
   display: inline-block;
   height: 130px;
   float: left;
@@ -120,7 +120,6 @@ $terror-red: #BD2C00;
    ===================================== */
 
 #terror-tracker {
-  background: rgba(255, 255, 255, 0.4);
   display: inline-block;
   height: 130px;
   width: Calc(100% - 320px);
@@ -130,6 +129,13 @@ $terror-red: #BD2C00;
     margin-bottom: 10px;
     text-align: center;
   }
+}
+
+.terror-border {
+  background: #000;
+  height: 30px;
+  margin: 0 auto;
+  width: 90%;
 }
 
 .terror-bar {
@@ -158,7 +164,6 @@ $terror-red: #BD2C00;
     font-size: 5.8rem;
     line-height: 6.6rem;
     margin: 0;
-    padding: 10px;
     text-transform: uppercase;
   }
 }
@@ -221,7 +226,7 @@ $terror-red: #BD2C00;
    ===================================== */
 
 #news-block {
-  @include topBottomGradient(rgba(30, 88, 153, 0.7), rgba(150, 200, 255, 0.7), rgba(150, 200, 255, 0.7));
+  background: rgba(176, 214, 255, 0.69);
   bottom: 70px;
   box-shadow: 3px -3px 15px -5px rgba(0,0,0,0.75);
   position: fixed;
@@ -268,6 +273,7 @@ $terror-red: #BD2C00;
   padding: 10px;
 
   h4 {
+    display: inline-block;
     font-size: 4.8rem;
     line-height: 5.6rem;
     font-weight: bold;
@@ -280,9 +286,14 @@ $terror-red: #BD2C00;
   }
 
   p {
+    display: inline;
     font-size: 4.8rem;
     line-height: 5.6rem;
     margin: 5px auto
+  }
+
+  .news-time {
+    font-style: italic;
   }
 
   a {
@@ -301,6 +312,10 @@ $terror-red: #BD2C00;
     overflow: hidden;
     position: relative;
     width: calc(100% - 380px);
+
+    &.landscape {
+      width: 100%;
+    }
   }
 
   .slide {
@@ -314,12 +329,10 @@ $terror-red: #BD2C00;
   background: $black;
   border: 20px solid #1e5799;
   bottom: 0px;
-  height: 380px;
+  box-shadow: -3px -3px 15px -5px rgba(0,0,0,0.75);
+  overflow: hidden;
   position: absolute;
   right: 0px;
-  width: 380px;
-
-  box-shadow: -3px -3px 15px -5px rgba(0,0,0,0.75);
 
   .placeholder {
     background-color: $black;
