Finish handling news image orientation on the front.

--- a/app/views/games/dashboard.html.erb
+++ b/app/views/games/dashboard.html.erb
@@ -37,7 +37,7 @@
       <div class="triangle"></div>
     </div>
 
-    <div id="news-image" ng-class="news[newsIndex].media_landscape == true ? 'landscape' : 'portrait'">
+    <div id="news-image" ng-class="news[newsIndex].media_landscape == true ? 'landscape' : 'portrait'" ng-if="news[newsIndex].media_url">
       <div class="image"
            ng-show="news[newsIndex].media_url"
            style="background-image: url({{news[newsIndex].media_url}})">
@@ -45,7 +45,7 @@
     </div>
 
     <div id="news-container">
-      <div class="slider" ng-if="news.length>0" ng-class="news[newsIndex].media_landscape == true ? 'landscape' : 'portrait'">
+      <div class="slider" ng-if="news.length>0" ng-class="news[newsIndex].media_landscape == false && news[newsIndex].media_url ? 'portrait' : 'landscape'">
         <div ng-repeat="news_item in news"
              class="slide slide-animation nonDraggableImage"
              ng-hide="!isCurrentSlideIndex($index)">
