Schema Relationship Changes (Users have games) + Games Controller Updates

--- a/app/views/games/admin.html.erb
+++ b/app/views/games/admin.html.erb
@@ -39,7 +39,7 @@
   <h3>Advanced Controls</h3>
   <section>
     <ul>
-      <li><p>Current time is: <%= @time %></p>
+      <li><p>Next round is at: <%= @time %></p>
         <p>Current time zone is: <%= @game.time_zone %></p>
         <%= form_for(@game, url: update_time_path(@game)) do |f|%>
           <%= Time.use_zone(@game.time_zone) do %>
