Restructure request to allow error handling. Add connection error icon.

--- a/app/views/games/dashboard.html.erb
+++ b/app/views/games/dashboard.html.erb
@@ -1,5 +1,9 @@
 <div ng-app='dashboardApp' ng-controller="dashboardCtrl" id="dashboard">
   <div id="top-container">
+
+    <!-- Connection Error -->
+    <div id="connection-error"></div>
+
     <!-- Round Information -->
     <div id="round-container">
       <h2>Turn {{round}}</h2>
