--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -96,6 +96,16 @@ $terror-red: #BD2C00;
 #top-container {
   height: 130px;
   margin: 0 20px;
+  position: relative;
+}
+
+#connection-error {
+  background-image: url('/assets/connection-error.png');
+  height: 50px;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  width: 63px;
 }
 
 #round-container {
