Fix labels and news

--- a/app/views/games/human_control.html.erb
+++ b/app/views/games/human_control.html.erb
@@ -38,10 +38,10 @@
       <table class="unpr">
         <tr>
           <th>Country</th>
-          <th>Round <%= @current_round %> Income</th>
-          <th>Round <%= @current_round %> Credits</th>
-          <th>Bonus Credits for Round <%= @current_round %></th>
-          <th>Recurring Credits</th>
+          <th>Distributed Round <%= @current_round %> Income</th>
+          <th>Distributed Round <%= @current_round %> Credits</th>
+          <th>Bonus Credits Distributed for Round <%= @current_round %></th>
+          <th>Distributed Recurring Credits</th>
         </tr>
         <% @incomes.each do |income| %>
           <tr>
