--- a/app/views/splash/index.html.erb
+++ b/app/views/splash/index.html.erb
@@ -11,6 +11,7 @@
         <label><input type="checkbox" value="remember-me"> Remember me</label>
       </div>
       <button class="form-control button" type="submit">Sign in</button>
+      <a href="">Forgot your password?</a>
     </form>
 
     <!-- Else -->
